12/06/2012
a_0.02 Change Log:

-Zombies now 75% less braindead (no more running into each other and doorframes)
-Numpad controls enabled! (Everybody is a king!)
-XP bar woop
-'?' now shows all controls

13/06/2012
a_0.03 Change Log:

-Stopped player spawning ontop of zombies (sorry Anne you can't use them as transport :P)
-Improved game balance (kinda)
-Death messages implimented woot!(soon to be leaderboard)
-Using an item now counts as a turn
-bandages now heal 1/3 of the total damage done to the character
-basic mouse move/attack
-woop molotovs! (they're not great atm but useful if youre being chased down a corridor :D)
-no more accidental esc to quit the game
